@@ -1,3 +1,7 @@
+2000-09-25  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Added DBFGetNativeFieldType() (contributed by Daniel) to dbfopen.c.
+
 2000-07-18  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* added better enforcement of -1 for append in SHPWriteObject().
